update: docker-compose.yml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,20 @@
+#spring.application.name=Picasso-BE
+#spring.datasource.url=jdbc:postgresql://localhost:5432/studio_db
+#spring.datasource.username=admin
+#spring.datasource.password=admin123
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
 spring.application.name=Picasso-BE
-spring.datasource.url=jdbc:postgresql://localhost:5432/studio_db
-spring.datasource.username=admin
-spring.datasource.password=admin123
+
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
