--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,14 +8,12 @@
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
-spring.application.name=Picasso-BE
-
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/studio_db}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:admin}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:admin123}
-
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
